Springboot部署jar，依赖外置，方便后续更新部署。需添加启动参数 -Djava.ext.dirs=lib 。且不适于包含第三方jar的情况。相关详见https://www.lwohvye.com/2021/06/05/springboot%e9%a1%b9%e7%9b%ae%e6%89%93%e9%83%a8%e7%bd%b2jar%ef%bc%8c%e4%bb%a3%e7%a0%81%e4%be%9d%e8%b5%96%e5%88%86%e7%a6%bb/