@@ -15,6 +15,13 @@
 后台运行jar
 nohup java --add-opens java.base/java.lang=ALL-UNNAMED -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -jar eladmin-starter-2.6.10.jar >nohup.out 2>&1 &
 
+若外置依赖启动参数需添加。外置依赖可以大大减少jar包的体积。方便后续更新部署
+```shell
+-Djava.ext.dirs=lib 
+#启动示例
+nohup java --add-opens java.base/java.lang=ALL-UNNAMED -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -Djava.ext.dirs=lib -jar eladmin-starter-2.6.10.jar >nohup.out 2>&1 &
+```
+
 ```
 当前在Spring Boot 2.5版本存在报错：（使用Idea时正常，jar运行时报错）
 java.lang.IllegalStateException: No subdirectories found for mandatory directory location 'file:./config/*/'
